aprimoramento de controller e htmls

--- a/taskmanager/src/main/resources/templates/index.html
+++ b/taskmanager/src/main/resources/templates/index.html
@@ -63,10 +63,10 @@
                 <!-- Dropdown menu -->
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item" href="tarefa">Nova tarefa</a>
+                    <a class="dropdown-item" href="tasks/new-task">Nova tarefa</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="listar-tarefa">Listar tarefa</a>
+                    <a class="dropdown-item" href="tasks/list-tasks">Listar tarefa</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
             <!-- Left links -->
