criados campos das tarefas e prep do h2

--- a/taskmanager/src/main/resources/templates/index.html
+++ b/taskmanager/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
                 <!-- Dropdown menu -->
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item" href="tasks/new-task">Nova tarefa</a>
+                    <a class="dropdown-item" href="tasks">Nova tarefa</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="tasks/list-tasks">Listar tarefa</a>
